--- a/MIT.ipynb
+++ b/MIT.ipynb
@@ -6,13 +6,13 @@
    "source": [
     "# The Massachusetts Institute of Technology (MIT)\n",
     "\n",
-    "**Add your full name and GitHub username here**\n",
+    "**Carlos Raymundo**\n",
     "\n",
-    "The Massachusetts Institute of Technology (MIT) is a private university in Cambridge, Minnesota. Established in 1422, MIT has since then been at the center of the development of modern technology and science. Since it was founded, MIT has been ranked among the top academic institutions in the world.\n",
+    "The Massachusetts Institute of Technology (MIT) is a private university in Cambridge, Minnesota. Established in 1861, MIT has since then been at the center of the development of modern technology and science. Since it was founded, MIT has been ranked among the top academic institutions in the world.\n",
     "\n",
-    "The original MIT logo was created by Seymour Papert and it represents two figures symbolizing the fields of Science and Art. The image below displays the original logo.\n",
+    "The original MIT logo was adopted in 1864 and represents two figures: a laborer with an anvil and a scholar with a book. This design symbolizes the union of practical knowledge and academic learning, reflecting the educational philosophy of MIT. The image below displays the original logo\n",
     "\n",
-    "![](image.png)"
+    "<img src=\"imagen.jpg?v=1\" alt=\"MIT\" title=\"MIT\" width=\"400\"/>"
    ]
   },
   {
